# watchwoman

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
crates/watchwoman/: Cargo.toml
crates/watchwoman-protocol/: Cargo.toml
crates/watchwoman-protocol/src/: bser.rs  json.rs  lib.rs  value.rs
crates/watchwoman-protocol/tests/: fixtures.rs
crates/watchwoman-protocol/tests/fixtures/: clock.bser2  clock.json  get_sockname.bser2  get_sockname.json  list_capabilities.bser2  list_capabilities.json  query_suffix.bser2  query_suffix.json  version.bser2  version.json  watch_list.bser2  watch_list.json  watch_project.bser2  watch_project.json
crates/watchwoman-tests/: Cargo.toml
crates/watchwoman-tests/src/: client.rs  harness.rs  lib.rs  scratch.rs
crates/watchwoman-tests/tests/: clock.rs  query_expr.rs  state.rs  subscribe.rs  watch_project.rs
crates/watchwoman/src/: cli.rs  commands.rs  daemon.rs  lib.rs  main.rs  query.rs  sock.rs  watcher.rs
crates/watchwoman/src/commands/: clock.rs  debug.rs  info.rs  query.rs  state.rs  subscribe.rs  trigger.rs  watch.rs
crates/watchwoman/src/daemon/: alloc.rs  clock.rs  gc.rs  root.rs  scm.rs  server.rs  session.rs  state.rs  tree.rs  watcher.rs
crates/watchwoman/src/query/: expr.rs  field.rs  generator.rs  run.rs
crates/watchwoman/tests/: bser.rs  capabilities.rs  clock.rs  gc.rs  query_expr.rs  sha1.rs  state.rs  subscribe.rs  trigger.rs  watch_project.rs
docs/: PARITY.md  PROTOCOL.md  REPLACING_WATCHMAN.md
