[workspace]
resolver = "2"
members = [
    "crates/watchwoman",
    "crates/watchwoman-protocol",
    "crates/watchwoman-tests",
]

[workspace.package]
version = "0.5.2"
edition = "2021"
rust-version = "1.82"
authors = ["James Cleveland <jc@blit.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/radiosilence/watchwoman"
description = "A drop-in watchman replacement that doesn't eat your RAM."

[workspace.dependencies]
watchwoman-protocol = { path = "crates/watchwoman-protocol", version = "0.5.2" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "io-util",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
notify = "7"
ignore = "0.4"
globset = "0.4"
regex = "1"
dashmap = "6"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
nix = { version = "0.29", features = ["fs", "user", "signal", "resource"] }
tempfile = "3"
sha1 = "0.10"
bumpalo = { version = "3", features = ["allocator-api2", "collections"] }
hashbrown = { version = "0.15", features = ["allocator-api2", "default-hasher"] }
allocator-api2 = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
strip = "none"
debug = 1
