[package]
name = "watchwoman-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Watchman JSON and BSER protocol codecs."

[dependencies]
bytes.workspace = true
indexmap = { version = "2", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
