[package]
name = "watchwoman"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "watchwoman"
path = "src/main.rs"

# Drop-in alias.  Same source, different argv[0] — every tool that
# expects `watchman` on `$PATH` resolves to us instead.
[[bin]]
name = "watchman"
path = "src/main.rs"

# Companion tools ported from watchman's `watchman-wait` and
# `watchman-make`.  Both are thin subscribe wrappers that talk to the
# same daemon on the same socket.
[[bin]]
name = "watchman-wait"
path = "src/bin/watchman_wait.rs"

[[bin]]
name = "watchman-make"
path = "src/bin/watchman_make.rs"

[[bin]]
name = "watchman-diag"
path = "src/bin/watchman_diag.rs"

[[bin]]
name = "watchmanctl"
path = "src/bin/watchmanctl.rs"

[dependencies]
watchwoman-protocol.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
clap.workspace = true
clap_complete.workspace = true
notify.workspace = true
ignore.workspace = true
globset.workspace = true
regex.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
nix.workspace = true
sha1.workspace = true
bumpalo.workspace = true
hashbrown.workspace = true
allocator-api2.workspace = true
indexmap = { version = "2", features = ["serde"] }

# jemalloc gives us two things the system allocator on macOS won't:
# (1) more aggressive page-return behaviour by default, and (2) an
# explicit `arena.<all>.purge` mallctl we call after a watch is torn
# down so that freed file-tree allocations actually shrink RSS instead
# of sitting on the allocator's free list forever.  Linux gets the
# same benefit; Windows isn't supported by jemalloc so we keep the
# system allocator there.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-sys = "0.6"

[dev-dependencies]
watchwoman-tests = { path = "../watchwoman-tests" }
indexmap = { version = "2", features = ["serde"] }
